tests/paczka2/big_fuzzy/94801909.err
Error in line 7: XhEQo3 S208 87,3
Error in line 22: S844 S452 -2,2
Error in line 10: Qdmsdj1qqBk S452 98,4
Error in line 18: S844 S452 61,1
Error in line 23: mMQM S844 24,4
Error in line 35: S844 S205 12,63
Error in line 36: Qdmsdj1qqBk S208 39,45
Error in line 34: XhEQo3 S205 28,5
Error in line 26: S844 S205 9,3
Error in line 44: mMQM S452 62,4
Error in line 39: Qdmsdj1qqBk S452 92,2
Error in line 54: fh0ov S208 6,6
Error in line 41: pc8RoqtXrQw S208 96,9
Error in line 59: S!44 S20! 57,3
Error in line 65: mMQMýS205ý218,9
Error in line 66: Qdmsdj1qqBk S844 61,3
Error in line 71: Qdmsdj1qqBk S205 41,2
Error in line 61: pc8RoqtXrQw S844 41,4
Error in line 73: Qdmsdj1qqBk S452 33,1
Error in line 62: mMQM S205 82,3
Error in line 81: mMQM S208 22,0
Error in line 42: S844 S208 36,7
Error in line 84: S844 S844 59,7
Error in line 76: pc8RoqtXrQw S205 74,4
Error in line 92: fh0ov S452 -1,0
Error in line 97: XhEQo3 S208 10,0
Error in line 120: Qdmsdj1qqBk S208 83,2
Error in line 123: XhEQo3 S452 102,0
Error in line 129: IAc1k3X S205 61,0
Error in line 145: XhEQo3 452 30,6
Error in line 146: XhEQo3 S452 55,1
Error in line 124: pc8RoqtXrQw S844 42,9
Error in line 153: Qdmsdj1qqBk S208 75,0
Error in line 152: XhEQo3 S844 3,0
Error in line 174: pc8RoqtXrQw S205 77,9
Error in line 185: pc8RoqtXrQw S205 21,1
Error in line 192: Qdmsdj1qqBk S208 1,3
Error in line 197: mMQM S208 39,8
Error in line 196: Qdmsdj1qqBk S205 1,8
Error in line 198: mMQM S452 34,4
Error in line 203: mMQM S844 75,1
Error in line 201: Qdmsdj1qqBk S844 86,0
Error in line 215: S844 S452 30,7
Error in line 227: pc8RoqtXrQw S208 75,33
Error in line 222: pc8RoqtXrQw S205 67,4
Error in line 237: fh0ov S844 5,3
